--- a/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
@@ -48,7 +48,7 @@
               <mat-label>Content titel</mat-label>
               <input matInput type="text" id="latestWorkContentTitle" placeholder="Titel" name="latestWorkContentTitle"
                 [(ngModel)]="latestWork.title" #latestWorkContentTitleInput="ngModel" required>
-              <mat-error [hidden]="latestWorkContentTitleInput.valid || latestWorkContentTitleInput.pristine">
+              <mat-error *ngIf="latestWorkContentTitleInput.invalid">
                 Titel is verplicht</mat-error>
             </mat-form-field>
 
@@ -58,7 +58,7 @@
               <input matInput type="text" id="latestWorkContentSubTitle" placeholder="Subtitel"
                 name="latestWorkContentSubTitle" [(ngModel)]="latestWork.subTitle"
                 #latestWorkContentSubTitleInput="ngModel" required>
-              <mat-error [hidden]="latestWorkContentSubTitleInput.valid || latestWorkContentSubTitleInput.pristine">
+              <mat-error *ngIf="latestWorkContentSubTitleInput.invalid">
                 Subtitel is verplicht
               </mat-error>
             </mat-form-field>
@@ -69,7 +69,7 @@
               <textarea rows="1" matInput type="text" id="latestWorkContentText" placeholder="Text"
                 name="latestWorkContentText" [(ngModel)]="latestWork.text" #latestWorkContentTextInput="ngModel"
                 required> </textarea>
-              <mat-error [hidden]="latestWorkContentTextInput.valid || latestWorkC.pristine">
+              <mat-error *ngIf="latestWorkContentTextInput.invalid">
                 Text is verplicht
               </mat-error>
             </mat-form-field>
@@ -79,7 +79,7 @@
               <mat-label>Items</mat-label>
               <input matInput type="number" id="latestWorkContentAmount" name="latestWorkContentAmount" min="1" max="6"
                 [(ngModel)]="latestWork.amount" #latestWorkContentAmountInput="ngModel" required>
-              <mat-error [hidden]="latestWorkContentAmountInput.valid || latestWorkContentAmountInput.pristine">
+              <mat-error *ngIf="latestWorkContentAmountInput.invalid">
                 Aantal is verplicht
               </mat-error>
             </mat-form-field>
