--- a/angular-web-app/src/app/components/_admin/painting-edit/painting-edit.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-edit/painting-edit.component.html
@@ -48,7 +48,7 @@
               <mat-label>Titel</mat-label>
               <input matInput id="title" placeholder="Titel" name="title" [(ngModel)]="painting.title"
                 [disabled]="formDisabled" #title="ngModel" required />
-              <mat-error [hidden]="title.valid || title.pristine">
+              <mat-error *ngIf="title.invalid">
                 Titel is <strong>verplicht</strong>
               </mat-error>
             </mat-form-field>
@@ -57,7 +57,7 @@
               <mat-label>Kunstenaar</mat-label>
               <input matInput id="artist" placeholder="Kunstenaar" name="artist" [(ngModel)]="painting.artist"
                 [disabled]="formDisabled" #artist="ngModel" required />
-              <mat-error [hidden]="artist.valid || artist.pristine">
+              <mat-error *ngIf="artist.invalid">
                 Kunstenaar is <strong>verplicht</strong>
               </mat-error>
             </mat-form-field>
@@ -73,7 +73,7 @@
                   {{ paint }}
                 </mat-option>
               </mat-select>
-              <mat-error [hidden]="paint.valid || paint.pristine">
+              <mat-error *ngIf="paint.invalid">
                 Verf is <strong>verplicht</strong>
               </mat-error>
             </mat-form-field>
@@ -86,7 +86,7 @@
                   {{ material }}
                 </mat-option>
               </mat-select>
-              <mat-error [hidden]="material.valid || material.pristine">
+              <mat-error *ngIf="material.invalid">
                 Materiaal is <strong>verplicht</strong>
               </mat-error>
             </mat-form-field>
@@ -102,7 +102,7 @@
                   {{ category }}
                 </mat-option>
               </mat-select>
-              <mat-error [hidden]="category.valid || category.pristine">
+              <mat-error *ngIf="category.invalid">
                 Categorie is <strong>verplicht</strong>
               </mat-error>
             </mat-form-field>
@@ -115,7 +115,7 @@
                   {{ state }}
                 </mat-option>
               </mat-select>
-              <mat-error [hidden]="state.valid || state.pristine">
+              <mat-error *ngIf="state.invalid">
                 Status is <strong>verplicht</strong>
               </mat-error>
             </mat-form-field>
