--- a/angular-web-app/src/app/components/_layout/footer/footer.component.html
+++ b/angular-web-app/src/app/components/_layout/footer/footer.component.html
@@ -1,36 +1,43 @@
 <!-- Footer-->
-<footer id="site-footer" *ngIf="footerContent" [class.footer-fixed]="fixed" [class.mat-elevation-z8]="elevated">
+<footer id="site-footer" [class.footer-fixed]="fixed" [class.mat-elevation-z8]="elevated">
 
-  <div class="pt-5">
-    <div class="container">
-      <div class="row">
+  <div *ngIf="footerContent">
+    <div class="pt-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 pb-4">
+            <h4 class="title-underlined">{{ footerContent.aboutTitle }}</h4>
+            <p>{{ footerContent.aboutText }}</p>
+          </div>
 
-        <div class="col-md-6 pb-4">
-          <h4 class="title-underlined">{{ footerContent.aboutTitle }}</h4>
-          <p>{{ footerContent.aboutText }}</p>
+          <div class="col-md-6 pb-4">
+            <h4 class="title-underlined">{{ footerContent.socialTitle }}</h4>
+            <p>{{ footerContent.socialText }}</p>
+            <ul class="list-inline">
+              <!-- facebook, twitter, instagram -->
+              <li *ngIf="footerContent.facebookLink" class="list-inline-item"><a [href]="footerContent.facebookLink"
+                  target="blank"><img class="social-icon" src="../../../../assets/img/icons/facebook.png" alt=""></a>
+              </li>
+              <li *ngIf="footerContent.twitterLink" class="list-inline-item"><a [href]="footerContent.twitterLink"
+                  target="blank"><img class="social-icon" src="../../../../assets/img/icons/twitter.png" alt=""></a>
+              </li>
+              <li *ngIf="footerContent.instagramLink" class="list-inline-item"><a [href]="footerContent.instagramLink"
+                  target="blank"><img class="social-icon" src="../../../../assets/img/icons/instagram.png" alt=""></a>
+              </li>
+            </ul>
+          </div>
+
         </div>
-
-        <div class="col-md-6 pb-4">
-          <h4 class="title-underlined">{{ footerContent.socialTitle }}</h4>
-          <p>{{ footerContent.socialText }}</p>
-          <ul class="list-inline">
-            <!-- facebook, twitter, instagram -->
-            <li *ngIf="footerContent.facebookLink" class="list-inline-item"><a [href]="footerContent.facebookLink" target="blank"><img class="social-icon" src="../../../../assets/img/icons/facebook.png" alt=""></a></li>
-            <li *ngIf="footerContent.twitterLink" class="list-inline-item"><a [href]="footerContent.twitterLink" target="blank"><img class="social-icon" src="../../../../assets/img/icons/twitter.png" alt=""></a></li>
-            <li *ngIf="footerContent.instagramLink" class="list-inline-item"><a [href]="footerContent.instagramLink" target="blank"><img class="social-icon" src="../../../../assets/img/icons/instagram.png" alt=""></a></li>
-          </ul>
-        </div>
-
       </div>
     </div>
-  </div>
 
-  <!-- Copyright -->
-  <div class="py-3">
-    <div class="container">
-      <hr>
-      <div class="row d-flex flex-row align-items-center justify-footerContent-center">
-        <div class="text-center w-100">{{ footerContent.footerText }}</div>
+    <!-- Copyright -->
+    <div class="py-3">
+      <div class="container">
+        <hr>
+        <div class="row d-flex flex-row align-items-center justify-footerContent-center">
+          <div class="text-center w-100">{{ footerContent.footerText }}</div>
+        </div>
       </div>
     </div>
   </div>
