--- a/angular-web-app/src/app/components/_pages/admin/admin.component.html
+++ b/angular-web-app/src/app/components/_pages/admin/admin.component.html
@@ -19,7 +19,7 @@
       <div class="d-flex flex-column scroll-content-wrapper bg-light txt-dark">
         <div class="d-flex flex-column scroll-content h-100">
           <!-- Router Outlet -->
-          <div [@fadeAnimation]="getRouterOutletState(outlet)" class="px-3" style="padding-top: 56px;">
+          <div [@routeAnimations]="prepareRoute(outlet)" class="px-3" style="padding-top: 56px;">
             <router-outlet #outlet="outlet"></router-outlet>
           </div>
         </div>
