--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -1,5 +1,6 @@
 <!-- Header -->
-<app-header *ngIf="pageTitle" [title]="pageTitle.title" [subTitle]="pageTitle.subTitle" [image]="pageTitle.image" [small]="false"></app-header>
+<app-header *ngIf="pageTitle" [title]="pageTitle.title" [subTitle]="pageTitle.subTitle" [image]="pageTitle.image"
+  [small]="false"></app-header>
 
 <main id="home" class="main main-raised" *ngIf="generalContent">
   <!-- Services -->
