--- a/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
+++ b/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
@@ -6,7 +6,7 @@
           <ng-template ngbSlide *ngFor="let image of images">
             <div class="d-flex flex-column align-items-center justify-content-center img-wrapper">
               <!-- Image -->
-              <img [src]="image" class="slider-img">
+              <img [src]="image" class="slider-img {{elevation}}">
               <!-- Caption -->
               <div class="slider-img-caption p-3">
                 <button mat-fab color="primary" class="mx-2" aria-label="Show image" (click)="openImage(content, image)">
